# beacon-devnet-genesis

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml  release.yml
benches/: keypair_derive.rs
src/: lib.rs  main.rs
tests/: block_beacon_13412599.json  mnemonics.yml  run_go_impl.sh  run_rust_impl.sh  validate_testnet_dir.sh
tests/testnet_dir_capella/: block_exec_32096192.json  config.yaml  latest_execution_payload_header_13412599.json
tests/testnet_dir_gnosis/: config.yaml
tests/testnet_dir_mainnet/: config.yaml
tests/testnet_dir_mainnet_10k/: config.yaml  mnemonics.yml
tests/testnet_dir_minimal/: config.yaml
